--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-google-maps/api": "^2.20.3",
+    "@remotion/player": "^4.0.223",
     "@tabler/icons-react": "^3.20.0",
     "buet-hackathon": "file:",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +34,7 @@
     "react-dropzone": "^14.2.10",
     "react-hot-toast": "^2.4.1",
     "react-responsive-carousel": "^3.2.23",
+    "remotion": "^4.0.223",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
